tests/mocks/success/http-tcp-udp-servers/app/sockets/udp/index.js
'use strict';
module.exports = class Index {

  static onRequest(socket) {

  }
  
};
