tests/mocks/fail/http-server-with-broken-route/app/routes/http-routes/test.js
'use strict';
module.exports = class Test {

};
